# robotnix

./: .envrc  .gitignore  .sops.yaml  404.html  CNAME  LICENSE  NEWS.md  README.md  attestation.html  build.sh  buildenv.nix  building.html  cachix-push.sh  check.nix  check.sh  components.json  components.nix  configs.nix  configuration.html  crosshatch.nix  default.nix  develop.nix  development.html  emulator.nix  example.nix  f-droid.html  flake.nix  flex-2.5.39.nix  generate_metadata.py  grapheneos.nix  index.html  installation.html  marlin.nix  mk-repo-file.py  nix.nix  opengapps.xml  options.html  ota.html  ota.nix  pkgs.nix  (+23 more)
android-prepare-vendor/: android-prepare-vendor.nix  android-prepare-vendor.patch  default.nix  dexrepair.nix  reproducibility.patch  simg2img.nix
apks/: default.nix
cuttlefish/: 0001-Hack-to-always-validate-host.patch  README.md  crosvm-hack.patch  cuttlefish.nix  default.nix  path-fixes.patch  repo-android-12.0.0_r2.json  repo-master-2020-10-28.json  skip-validate-host.patch
docs/: attestation.md  book.toml  default.nix  f-droid.md  gen-options-md.py  installation.md  sunfish.md
examples/: grapheneos.nix  lineageos.nix
flake/: compat.nix  outputs.nix
flavors/: common.nix  grapheneos.nix  hashes.json  jsonFiles.nix  pixel-imgs.json  pixel-otas.json  pixel.json  pixel.nix  update-hashes.sh  update-pixel.sh  vanilla.nix
hydra/: hydra-spec.json  (+3 more)
repo2nix/repo-tool/: Cargo.toml
repo2nix/repo-tool/src/: fetch.rs  graphene.rs  graphene_vendor.rs  lineage.rs  lineage_dependencies.rs  lineage_devices.rs  lock.rs  main.rs  utils.rs
(+1050 files in other folders)
